fixed layout issue, but needs cleaning up

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,4 +1,4 @@
 body,
 #root {
-  @apply h-full;
+  /* @apply h-full; */
 }
